--- a/practicaDiseñoResponsive/Mostly Fluid/styles.css
+++ b/practicaDiseñoResponsive/Mostly Fluid/styles.css
@@ -1,44 +1,54 @@
-/* Mostly Fluid */
-.container {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  flex-flow: row wrap;
+/* Reset básico para que los porcentajes funcionen perfecto */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
+/* Mostly Fluid */
+.container {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+/* Estado inicial: Móvil (1 columna) */
 .columna1,
 .columna2,
 .columna3,
 .columna4,
 .columna5 {
-  width: 100%;
+    width: 100%;
+    padding: 20px;
 }
 
+/* Tablet: De 600px en adelante */
 @media (min-width: 600px) {
-  .columna2,
-  .columna3,
-  .columna4,
-  .columna5 {
-    width: 50%;
-  }
+    .columna2,
+    .columna3,
+    .columna4,
+    .columna5 {
+        width: 50%;
+    }
 }
 
+/* Escritorio: De 800px en adelante */
 @media (min-width: 800px) {
-  .columna1 {
-    width: 60%;
-  }
-  .columna2 {
-    width: 40%;
-  }
-  .columna3,
-  .columna4,
-  .columna5 {
-    width: 33.3%;
-  }
+    .container {
+        width: 800px;
+        margin: 0 auto; /* Centra el contenedor */
+    }
 
-  .container {
-    width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+    .columna1 {
+        width: 60%;
+    }
+
+    .columna2 {
+        width: 40%;
+    }
+
+    .columna3,
+    .columna4,
+    .columna5 {
+        width: 33.33%;
+    }
 }
